examples/test/testpolicy16179.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16179
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key25: value12
      key19: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value37
          key22: value22
          key41: value3
      podSelector:
        matchLabels:
          key47: value20
          key37: value27
          key40: value46
